# scoring_testing

./: pyproject.toml
scoring/: scoring.py  store.py
tests/: conftest.py  fake.py  test_get_interests.py  test_get_score.py
